Fixed contact-links covering text with absolute

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4,6 +4,11 @@
     overflow: scroll;
 }
 
+#app .app-main,
+#app .app-main .page {
+    height: 100%;
+}
+
 #app .app-button:hover {
     cursor: pointer;
 }
@@ -19,8 +24,6 @@
 }
 
 #app .contact-links {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     margin-bottom: 59px;
     font-size: 1.5em;
